# model/user_basic.go
@@ -1,0 +1,6 @@
+package model
+
+type LoginRequest struct {
+	Username string `json:"username" binding:"required,min=5,max=20"`
+	Password string `json:"password" binding:"required,min=8"`
+}
