# service/index.go
@@ -3,6 +3,8 @@ package service
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"qqchat/common"
+	"qqchat/model"
 	"qqchat/models"
 	"qqchat/utils"
 	"time"
@@ -60,4 +62,25 @@ func GetIndex(ctx *gin.Context) {
 	ctx.JSON(200, gin.H{
 		"message": "get index",
 	})
+}
+
+// @Tags 目录名称
+// @Summary 接口名称CheckTest
+// @Schemes
+// @Description 接口说明CheckTest
+// @Accept json
+// @Produce json
+// @Router /checkTest [get]
+// @Param data body model.LoginRequest true "请求参数  @Param [参数名] [参数类型] [数据类型] [是否必填] [描述信息(可选)]"
+// @Success 200 {object} common.Response
+// @Failure 400  {string} common.Response
+func CheckTest(c *gin.Context) {
+	var req model.LoginRequest
+	if err := common.ValidateRequest(c, &req); err != nil {
+		common.ErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 业务逻辑处理...
+	common.SuccessResponse(c, req)
 }
